--- a/second_page.html
+++ b/second_page.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
-<h1>Spotify API Mood Search</h1>
+<div class="header-container">
+    <h1>Spotify API Mood Search</h1>
+    <button id="logout-button">Logout</button>
+</div>
 
 <div class="image-container">
     <img src="happy.png" alt="Happy" class="mood-image" onclick="searchSongs('happy')">
@@ -24,7 +27,6 @@
 </div>
 
 <br/><br/>
-<button id="logout-button">Logout</button>
 
 <script>
 // Define searchSongs function first
