--- a/second_page.html
+++ b/second_page.html
@@ -11,7 +11,7 @@
 
 <div class="header-container">
     <h1>Spotify API Mood Search</h1>
-    <button id="logout-button">Logout
+    <button id="logout-button">Logout</button>
 </div>
 
 <div class="image-container">
