--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <h2>MoodSwinger</h2>
-    <a href="https://accounts.spotify.com/authorize?client_id=a80fcf0c3aae4aabb6f6b6721183b72e&response_type=token&redirect_uri=https://scripteds.github.io/MoodSwinger/second_page.html&scope=user-read-private%20user-read-email%20playlist-modify-public&state=STATE&show_dialog=true" class="spotify-login-btn">Login with Spotify</a>
+    <<a href="https://accounts.spotify.com/authorize?client_id=a80fcf0c3aae4aabb6f6b6721183b72e&response_type=token&redirect_uri=https://scripteds.github.io/MoodSwinger/second_page.html&scope=user-read-private,user-read-email,playlist-modify-public&state=STATE&show_dialog=true" class="spotify-login-btn">Login with Spotify</a>
     <div class="container">
         <div class="moods">
             <img src="happy.png" alt="Happy" class="mood">
