--- a/second_page.html
+++ b/second_page.html
@@ -134,7 +134,7 @@
 
   sessionStorage.setItem('accessToken', accessToken);
 
-  const playlistId = '7Fn5SdMYGiqLK9rtTfv0OJ';
+  const playlistId = '13ormTxG6AcdCR60Oill7u';
   const trackUris = ['spotify:track:7yCF65vpc7sUwPjftI0iFb'];
   const data = {
     uris: trackUris,
