--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 </head>
 <body>
     <h2>MoodSwinger</h2>
-     <<a href="https://accounts.spotify.com/authorize?client_id=b3663f88aa9d4b85a24b868d09128f1f&response_type=token&redirect_uri=https://scripteds.github.io/MoodSwinger/second_page.html&scope=user-read-private,user-read-email,playlist-modify-public&state=STATE&show_dialog=true" class="spotify-login-btn">Login with Spotify</a>
+     <a href="https://accounts.spotify.com/authorize?client_id=b3663f88aa9d4b85a24b868d09128f1f&response_type=token&redirect_uri=https://scripteds.github.io/MoodSwinger/second_page.html&scope=user-read-private,user-read-email,playlist-modify-public&state=STATE&show_dialog=true" class="spotify-login-btn">Login with Spotify</a>
     <div class="container">
         <div class="moods">
             <img src="happy.png" alt="Happy" class="mood">
