--- a/second_page.html
+++ b/second_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify API Mood Search</title>
+    <title>MoodSwinger</title>
     <link rel="stylesheet" href="second_page.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
@@ -235,7 +235,7 @@
 </head>
 <body>
     <div class="header-container">
-        <h1>Spotify API Mood Search</h1>
+        <h1>MoodSwinger</h1>
         <button id="logout-button">Logout</button>
     </div>
 
